// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Addon Notes using deprecated API 1`] = `
<button
  disabled={false}
  onClick={[Function]}
  style={Object {}}
>
  😀 😎 👍 💯
</button>
`;

exports[`Storyshots Addon Notes withNotes 1`] = `
<button
  disabled={false}
  onClick={[Function]}
  style={Object {}}
>
  Button with notes - check the notes panel for details
</button>
`;

exports[`Storyshots Addon Notes withNotes rendering imported markdown 1`] = `
<button
  disabled={false}
  onClick={[Function]}
  style={Object {}}
>
  Button with notes - check the notes panel for details
</button>
`;
